--- a/roles/postgres/templates/patroni.yml.j2
+++ b/roles/postgres/templates/patroni.yml.j2
@@ -4,12 +4,11 @@ name: {{ hostnames[ansible_default_ipv4.address] }}
 restapi:
   listen: {{ ansible_default_ipv4.address }}:8008
   connect_address: {{ ansible_default_ipv4.address }}:8008
-etcd:
+etcd:   
   hosts: 
 {% for ip in groups['etcd'] %}
     - {{ hostvars[ip].ansible_default_ipv4.address }}:2379
 {% endfor %}
-
 bootstrap:
   dcs:
     ttl: 30
@@ -24,7 +23,7 @@ bootstrap:
   pg_hba:
     - host replication replicator   127.0.0.1/32 md5
 {% for ip in groups['postgres'] %}
-    - host replication replicator   {{ hostvars[ip].ansible_default_ipv4.address }}/0 md5
+    - host replication replicator {{ hostvars[ip].ansible_default_ipv4.address }}/0 md5
 {% endfor %}
     - host all all   0.0.0.0/0   md5
   users:
@@ -40,7 +39,7 @@ postgresql:
    pgpass: /tmp/pgpass
    authentication:
     replication:
-      username: {{ patroni_repl_user_name }}
+      username: replicator
       password: {{ patroni_repl_user_pass }}
     superuser:
       username: {{ patroni_super_user_name }}
